--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>game_1</title>
+    <title>Cat Adventure</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-<script src="src/phaser.min.js"></script>
-<script src="src/script.js"></script>
-
-
+    <script src="src/phaser.min.js"></script>
+    <script src="src/scenes/BootScene.js"></script>
+    <script src="src/scenes/MenuScene.js"></script>
+    <script src="src/scenes/GameScene.js"></script>
+    <script src="src/components/Player.js"></script>
+    <script src="src/components/WorldGenerator.js"></script>
+    <script src="src/game.js"></script>
 </body>
 </html>
